Stretch calculator - bug fixes

--- a/Project-II-Calculator/calculator/src/components/DisplayComponents/Display.css
+++ b/Project-II-Calculator/calculator/src/components/DisplayComponents/Display.css
@@ -12,6 +12,7 @@
   margin-right: 10px;
   color: white;
   font-size: 4rem;
+  overflow: hidden;
 }
 
 html {
